This is the CHANGELOG for amavisd-milter.

20070902:
	amavisd-milter-1.3.0

	New features:
	- Implemented AM.PDP request attribute policy_bank (amavisd-new
	  2.5.0 or higher is required).  Currently SMTP_AUTH, SMTP_AUTH_<MECH>
	  and SMTP_AUTH<MECH>_<BITS> policy bank names are sent when the remote
	  client is authenticated.
	- Added new amavisd-milter option -D client|server which allow
	  personalized header or body modifications.

	Bug fixies:
	- fixed bug when amavisd communication buffer is growing.

	Compatibility:
	- properly get queue id when amavisd-milter is used with postfix.

	Performance:
	- improved performance under heavy load.

20070901:
	Performance optimization: use sem_timedwait instead of
	sem_trywait+sleep(1) for amavisd connection lock.
	Requested by: David Schweikert <david@schweikert.ch>

20070831:
	Added new amavisd-milter option -D client|server which allow
	personalized header or body modifications.
	Requested by: Brian C. Huffman <bhuffman@graze.net>

	Fixed bug when amavisd communication buffer is growing.
	Thanks to: Michael Moeller <mmoeller@kimchukmail.com>

20070729:
	Better compatibility with Postfix: it does give information about
	the queue-number only after the RCPT-TO-phase.
	Thanks to: David Schweikert <david@schweikert.ch>

20061219:
	amavisd-milter-1.2.1

	New features:
	- Implemented AM.PDP request attribute 'protocol_name'.
	  Add folowing line to your sendmail.mc:

	  define(`confMILTER_MACROS_ENVFROM', confMILTER_MACROS_ENVFROM`, r, b')

	Limited support for sendmail 8.12:
	- smfi_addheader() is used instead of smfi_insheader() for insheader
          and addheader AM.PDP responses. This works well with amavisd-new
          2.4.3 or newer.
	- smfi_progress() isn't called when amavisd-milter wait for amavisd-new
	  communication socket.
	- AM.PDP response quarantine isn't implemented.

	Bug fixies:
	- add synthesized Received header for Spamassassin.
	- properly handle IPv6 client address.

20061217: