@@ -1,5 +1,11 @@
 This is the CHANGELOG for amavisd-milter.
 
+20070915:
+	In mlfi.c:mlfi_envfrom() the gmtime() and localtime() call returns the
+	pointer to the same static struct.  Thus pointers gt and lt are
+	identical and the UTC offset is always +0000 which is bogus.
+	Thanks to: Curtis Doty <curtis@greenkey.net>
+
 20070902:
 	amavisd-milter-1.3.0
 
@@ -271,4 +277,4 @@ This is the CHANGELOG for amavisd-milter.
 	First public release.  Fully tested on FreeBSD 5.3.
 
 
-$Id: CHANGES,v 1.49 2007/09/02 12:22:15 reho Exp $
+$Id: CHANGES,v 1.50 2007/09/02 12:42:50 reho Exp $
